5/packages/angular_test/src/errors/will_never_stabilize.template.ddc.js
define(['dart_sdk'], function(dart_sdk) {
  'use strict';
  const core = dart_sdk.core;
  const dart = dart_sdk.dart;
  const dartx = dart_sdk.dartx;
  const _root = Object.create(null);
  const src__errors__will_never_stabilize$46template = Object.create(_root);
  let VoidTovoid = () => (VoidTovoid = dart.constFn(dart.fnType(dart.void, [])))();
  src__errors__will_never_stabilize$46template.initReflector = function() {
  };
  dart.fn(src__errors__will_never_stabilize$46template.initReflector, VoidTovoid());
  dart.trackLibraries("packages/angular_test/src/errors/will_never_stabilize.template.ddc", {
    "package:angular_test/src/errors/will_never_stabilize.template.dart": src__errors__will_never_stabilize$46template
  }, '{"version":3,"sourceRoot":"","sources":["will_never_stabilize.template.dart"],"names":[],"mappings":";;;;;;;;;EASsB","file":"will_never_stabilize.template.ddc.js"}');
  // Exports:
  return {
    src__errors__will_never_stabilize$46template: src__errors__will_never_stabilize$46template
  };
});

//# sourceMappingURL=will_never_stabilize.template.ddc.js.map
